--- a/WooCommerce-Tool/Views/GenerateOrdersView.xaml
+++ b/WooCommerce-Tool/Views/GenerateOrdersView.xaml
@@ -165,7 +165,7 @@
                 </Grid.ColumnDefinitions>
 
                 <StackPanel Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Center" >
-                    <Button Content="Generate" Style="{StaticResource ButtonG}" Click="Button_Click_1" />
+                    <Button Content="Generate" Style="{StaticResource ButtonG}" Click="Button_Click_Generate" />
                 </StackPanel>
                 <Grid Grid.Column="3" VerticalAlignment="Top" HorizontalAlignment="Center" >
                     <TextBlock Name="GenerationStatus" IsHitTestVisible="False" Text="{Binding Path=Status, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,0" Foreground="White"/>
