--- a/WooCommerce-Tool/Views/StorePredictionsView.xaml
+++ b/WooCommerce-Tool/Views/StorePredictionsView.xaml
@@ -136,7 +136,7 @@
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
                 <StackPanel Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Center" >
-                    <Button Content="Save" Style="{StaticResource ButtonG}" Click="Button_Click_1" />
+                    <Button Content="Save" Style="{StaticResource ButtonG}" Click="Button_Click_Save" />
                 </StackPanel>
             </Grid>
             <!--delete label  -->
@@ -174,7 +174,7 @@
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
                 <StackPanel Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Center" >
-                    <Button Content="Delete" Style="{StaticResource ButtonR}" Click="Button_Click_2" />
+                    <Button Content="Delete" Style="{StaticResource ButtonR}" Click="Button_Click_Delete" />
                 </StackPanel>
                 <Grid Grid.Column="3" VerticalAlignment="Top" HorizontalAlignment="Center" >
                     <TextBlock Name="Status" IsHitTestVisible="False" Text="{Binding Path=Status, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,0" Foreground="White"/>
