--- a/WooCommerce-Tool/Views/HomeView.xaml
+++ b/WooCommerce-Tool/Views/HomeView.xaml
@@ -6,7 +6,85 @@
              xmlns:local="clr-namespace:WooCommerce_Tool.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
+    <UserControl.Resources>
+
+    </UserControl.Resources>
+    <!-- black  #020C17    green/blue #0F1A2C-->
+    <Grid Background="#020C17" Height="570" Width="720" >
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="20"/>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="20" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="20" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="140"/>
+        </Grid.RowDefinitions>
+
+        <Grid Grid.Row="1" Grid.Column="1"  >
+            <!--inside grid -->
+            <Grid.RowDefinitions>
+                <RowDefinition Height="40" />
+                <RowDefinition Height="30" />
+                <RowDefinition Height="200"/>
+                <RowDefinition Height="50"/>
+            </Grid.RowDefinitions>
+            <!--grid corners -->
+            <Border CornerRadius="30,30,0,0" Grid.Row="0"  BorderThickness="3" Padding="0" BorderBrush="#0F1A2C">
+                <Border.Background>
+                    <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                        <GradientStop Color="#0F1A2C" />
+                    </LinearGradientBrush>
+                </Border.Background>
+            </Border>
+            <Border CornerRadius="0,0,30,30" Grid.Row="8"  BorderThickness="3" Padding="0" BorderBrush="#0F1A2C">
+                <Border.Background>
+                    <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                        <GradientStop Color="#0F1A2C" />
+                    </LinearGradientBrush>
+                </Border.Background>
+            </Border>
+
+            <!--Setting label-->
+            <Grid Grid.Row="0" >
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="50"/>
+                    <ColumnDefinition Width="200"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Column="1" VerticalAlignment="Bottom" HorizontalAlignment="Left">
+                    <Label Style="{StaticResource LabelBig}" Name="Label1" Content="Home" Width="300"/>
+                </TextBlock>
+            </Grid>
+            <!--general label -->
+            <Grid Grid.Row="1" Background="#0F1A2C" >
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="50"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left">
+                        <Label Style="{StaticResource LabelSmall}" x:Name="Label2" Content="E-commerce indicator forecasting and evaluation tool" FontFamily="Montsera"/>
+                </TextBlock>
+            </Grid>
+
+            <!--color fill  -->
+            <Grid Grid.Row="2"  Background="#0F1A2C"  >
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="50"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="50"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="50"/>
+                </Grid.RowDefinitions>
+                <Grid Grid.Column="1" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Left" >
+                    <TextBlock  IsHitTestVisible="False" Foreground="White"/>
+                </Grid>
+            </Grid>
+
+        </Grid>
+
     </Grid>
+
 </UserControl>
